# os_learning

./: Cargo.toml  README.md  bootloader_notes.txt
.cargo/: config.toml
src/: main.rs
