[package]
name = "os_learning"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9" # to turn our compiled kernel into a bootable disk image, this crate implements a basic bios bootloader
